<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neuronphysics.nernstpotential.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/buttonCalc"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ion_species"
        android:id="@+id/textViewIon"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/concentrations_mm"
        android:id="@+id/textViewConcentration"
        android:layout_below="@+id/space"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/c_in"
        android:id="@+id/textViewCin"
        android:layout_below="@+id/textViewConcentration"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/c_out"
        android:id="@+id/textViewCout"
        android:layout_below="@+id/editTextCin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCin"
        android:layout_below="@+id/textViewConcentration"
        android:layout_toRightOf="@+id/textViewCout"
        android:layout_alignRight="@+id/textViewConcentration"
        android:layout_alignEnd="@+id/textViewConcentration"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCout"
        android:layout_alignTop="@+id/textViewCout"
        android:layout_toRightOf="@+id/textViewCout"
        android:layout_alignRight="@+id/editTextCin"
        android:layout_alignEnd="@+id/editTextCin"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temperature_c"
        android:id="@+id/textViewTemp"
        android:layout_below="@+id/space2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTemp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/space2"
        android:layout_toRightOf="@+id/textViewTemp"
        android:layout_alignRight="@+id/editTextCout"
        android:layout_alignEnd="@+id/editTextCout" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/space"
        android:layout_below="@+id/radioGroupIon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/editTextCout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/space2"
        android:layout_alignRight="@+id/space"
        android:layout_alignEnd="@+id/space" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewVr"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/buttonCalc"
        android:layout_alignRight="@+id/editTextTemp"
        android:layout_alignEnd="@+id/editTextTemp"
        android:textAlignment="textEnd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reversal_potential_mv"
        android:id="@+id/textViewVrmv"
        android:layout_above="@+id/textViewVr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_toEndOf="@+id/textViewIon"
        android:id="@+id/radioGroupIon">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sodium"
            android:id="@+id/radioButtonNa" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potassium"
            android:id="@+id/radioButtonK" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chloride"
            android:id="@+id/radioButtonCl" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcium"
            android:id="@+id/radioButtonCa" />
    </RadioGroup>

</RelativeLayout>
